Add solution for day 3

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ repositories {
 }
 
 dependencies {
+    implementation libs.apache.commons.collections
+
     testImplementation libs.junit.jupiter.api
     testImplementation libs.junit.jupiter.params
     testRuntimeOnly libs.junit.jupiter.engine
