--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,3 +2,6 @@ versions.junit = "5.9.0"
 libraries.junit-jupiter-api    = { group = "org.junit.jupiter", name = "junit-jupiter-api",    version.ref = "junit" }
 libraries.junit-jupiter-engine = { group = "org.junit.jupiter", name = "junit-jupiter-engine", version.ref = "junit" }
 libraries.junit-jupiter-params = { group = "org.junit.jupiter", name = "junit-jupiter-params", version.ref = "junit" }
+
+versions.apache-commons-collections = "4.4"
+libraries.apache-commons-collections = { group = "org.apache.commons", name = "commons-collections4", version.ref = "apache-commons-collections" }
