--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,3 +5,6 @@ libraries.junit-jupiter-params = { group = "org.junit.jupiter", name = "junit-ju
 
 versions.apache-commons-collections = "4.4"
 libraries.apache-commons-collections = { group = "org.apache.commons", name = "commons-collections4", version.ref = "apache-commons-collections" }
+
+versions.jackson = "2.14.1"
+libraries.jackson = { group = "com.fasterxml.jackson.core", name = "jackson-databind", version.ref = "jackson" }
